--- a/Resources/style.css
+++ b/Resources/style.css
@@ -1,35 +1,50 @@
-*,
-*::before,
-*::after {
+/* CSS Styles */
+/* Author:Kishor M Balgi */
+* {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: black;
   font-family: "Press Start 2P", cursive;
   font-size: 40px;
   color: white;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-rendering: optimizeLegibility;
 }
-body {
-  background-color: black;
-}
 h1 {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   font-size: 80%;
   padding-left: 100px;
   margin: 50px auto;
 }
 form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size: 80%;
   width: 60%;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
   margin: 30px auto 30px auto;
 }
 input {
   outline: none;
-  width: 18%;
+  width: 22%;
+  text-align: center;
 }
 button {
   background: none;
@@ -42,31 +57,50 @@ button {
   outline: none;
 }
 ion-icon {
+  -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 ion-icon:hover {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+/* Main section */
 .date-time {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
-  width: 1140px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 80%;
   margin: 0 auto;
 }
+/* Clock display */
 .display-clock {
   display: grid;
   grid-template-columns: 1fr auto 1fr auto 1fr;
   font-size: 250%;
   width: auto;
-  margin: 150px auto 40px auto;
+  margin: 0 auto;
 }
+/* Date display */
 .display-date {
   width: auto;
   margin: 0 auto;
 }
+/* Clock nav */
 .clock-options {
   font-size: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
   width: 60%;
   margin: 50px auto 0 auto;
@@ -77,26 +111,41 @@ ion-icon:hover {
 .clock-options li button {
   padding-bottom: 10px;
   border-bottom: none;
+  -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 .clock-options li button:hover {
   color: red;
   border-bottom: 2px solid red;
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
+/* Heading */
 .heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+/* Alarm */
 .display-alarm {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   font-size: 70%;
 }
 .alarms {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
   margin: 10px 0;
 }
+/* Buttons */
 .add:hover {
   color: red;
 }
@@ -125,31 +174,36 @@ ion-icon:hover {
 .close:hover {
   color: red;
 }
-
 /* Timer */
 .timer-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
-/* Stopwatch */
-.stopwatch-block {
-  display: flex;
-  flex-direction: column;
-}
+/* Display stylings */
 .box {
   border: 5px solid orange;
-  width: 75px;
+  width: 80px;
   text-align: center;
   padding: 15px;
   border-radius: 10%;
   margin-right: 3px;
 }
-
+/* Input blocks. */
 .time-input-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
+  -webkit-box-align: baseline;
+  -ms-flex-align: baseline;
   align-items: baseline;
-  width: auto;
+  width: 100%;
   margin: 0 auto;
 }
 .time-input-block p {
@@ -162,26 +216,41 @@ ion-icon:hover {
   border-radius: 10%;
   height: 200%;
   text-align: center;
+  width: 130px;
+  margin: 0 15px;
 }
 .time-input:focus {
   border-color: orange;
+}
+.time-input::-webkit-input-placeholder {
+  color: white;
+}
+.time-input:-ms-input-placeholder {
+  color: white;
 }
 .time-input::placeholder {
   color: white;
 }
 .time-options {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size: 70%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   margin: 70px auto 0 auto;
 }
+/* Buttons */
 .btn-time {
   border: 3px solid white;
   padding: 10px 35px;
   margin: 0 15px;
+  -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
 .btn-time:hover {
+  -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 .btn-timer-start:hover {
@@ -200,20 +269,43 @@ ion-icon:hover {
   border-color: red;
   color: red;
 }
+/* Stopwatch */
+.stopwatch-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.stopwatch-input-block {
+  width: 55%;
+  margin: 0 auto;
+}
 /* Modal Window */
 .modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   width: 20%;
   height: auto;
   background-color: black;
   padding: 6rem;
   border-radius: 5px;
+  -webkit-box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   z-index: 10;
 }
@@ -221,15 +313,17 @@ ion-icon:hover {
   margin-bottom: 60px;
 }
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(255, 255, 255, 0.2);
+  -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
   z-index: 5;
 }
+/* Timer progress bar */
 .progress-bar {
   position: relative;
   width: 50%;
@@ -241,7 +335,7 @@ ion-icon:hover {
 .progress-bar-in {
   position: absolute;
   height: 100%;
-  width: --width;
+  width: 0;
   min-width: -1%;
   max-width: 100%;
   background-color: orange;
